[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mst"
version = "0.1.0"
authors = [{name = "Ethan Shurberg", email = "ethanshur@gmail.com"}]
description = "Minimum spanning tree assignment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "pytest"]

[tool.setuptools.packages.find]
where = ["."]
